--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <h1>CS103a App</h1>
 <p class="text-danger">WELCOME- APP home page</p>
 <% if (loggedIn) {%>
-    <a href="/archer">Kelden prompt page</a>
+    <a href="/kelden">Kelden prompt page</a>
     <% }%>
 
 
