--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,46 +1,42 @@
-<h1>About the app</h1>
-<p class="bg-info text-danger">This is a demo app</p>
 
-
-    <div class="row">
-      <div class="col bg-primary">
-        Column A
-        <img src="/images/KAT.jpg" width="100%">
-      </div>
-      <div class="col bg-info">
-        Column B
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-      </div>    
-      <div class="col bg-danger">
-        Column C
-        <img src="" width="100%">
-      </div>
+<br>
+<br>
+   <style>
+   .center {
+    text-align: center;
+    }</style> 
+    
+    <div class="center">
+        <h1 text-align= center class="text-danger">About the Productivity APP</h1>
+        <!-- Here we show how to encode a URI and get weather data -->
+        
+        <a href="https://weather.com/weather/today"> 
+            Get weather</a>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
-
-    <div class="row">
-        <div class="col bg-info">
-            Column B
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-          </div>    
-        <div class="col bg-primary">
-          Column A
-          <img src="/images/KAT.jpg" width="100%">
-        </div>
-
-      </div>
+    <h2 style="color:rgb(62, 6, 102);">Motivation</h2>
+    <p>
+        <h4 text-align=center class="text-danger">To Do List: </h4>
+    
+        <p>
+        The Todo List app is a convenient tool that enables you to keep track of your tasks, deadlines, and goals in a
+        streamlined and organized way
+    </p>
+    </p>
+    <p>
+        <h4 text-align=center class="text-danger">Transaction: </h4>
+        
+        Finance Tracker is a powerful and user-friendly expense tracking application built on the popular Express framework and
+        backed by the reliable and efficient MongoDB database through Mongoose
+    </p>
+    
+    <p>
+        <h4 text-align=center class="text-danger">SuperHero Builder: </h4>
+        
+        You can build your own favorite superhero from scratch
+    </p>
+        
+    
