--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,6 +18,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
@@ -36,34 +37,26 @@
                 </li>
 
                 <li class="nav-item">
+                  <a class="nav-link" href="/index">Index</a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="/team">Team</a>
+                </li>
+
+                <li class="nav-item">
                   <a class="nav-link" href="/todo">To do list</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/gptAbout">
-                    <span class="button">GPT About</span>
-                  </a>
+                
+                 <li class="nav-item">
+                  <a class="nav-link" href="/transaction">Transactions</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/index">
-                    <span class="button">GPT Index</span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/gpt">
-                    <span class="button">GPT Form</span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/team">
-                    <span class="button">GPT Team</span>
-                  </a>
-                </li>
+
                 <li class="nav-item">
                   <a class="nav-link" href="/logout">
                     <span class="button">Logout</span>
                   </a>
-              ``</li>
-                
+              </li>
 
                 <li class="nav-item">
                   <a class="nav-link" href="#">
