--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,29 @@
+<br>
+<br>
+   <style>
+   .center {
+    text-align: center;
+    }</style> 
+    
+    <div class="center">
+        <h1 text-align= center>APP</h1>
+        <p text-align = center> 
+        <font size = "4">
+            Select one of the options
+        </font>  
+        </p>
+        <!-- Here we show how to encode a URI and get weather data -->
+        <br>
+        <br>
+        <br>
+        <br>
+    </div>
 
-<h1>CS103a App</h1>
-<p class="text-danger">Welcome to the App</p>
-<!-- Here we show how to encode a URI and get weather data -->
-<% address = encodeURI("152 Aspinwall Ave, Brookline MA, 02446") %>
-<a href="https://geocoding.geo.census.gov/geocoder/locations/onelineaddress?address=<%= address %>&benchmark=2020&format=json"> 
-    get weather</a>
-    <br>
-
-
-
+    <div class="center">
+        
+        <a class="btn btn-danger"
+                href="/index/poems">Poem maker</a>
+        <a class="btn btn-danger"
+                href="/index/summaries">Summary maker</a>
+        <a class="btn btn-danger"
+                href="/index/superhero">Superhero Maker</a>
